# GithubExtractor

./: Cargo.toml  db.sql
Reporter/: db.js  helper.js  package-lock.json  package.json  server.js
Reporter/public/: File.html  File.js  SubFiles.html  SubFiles.js  errors.html  errors.js  forks.html  forks.js  index.html  index.js
src/: main.rs
src/Cloner/: CloneRepo.rs  mod.rs
src/Comparator/: CompareRepos.rs  mod.rs
src/Database/: Dao.rs  mod.rs
src/Extractor/: UrlExtrator.rs  mod.rs
src/models/: attribute_model.rs  file_model.rs  mod.rs
src/repo_files/: file_builder.rs  filter_file.rs  mod.rs
src/repo_files/testing_benchmarks/: extract_attr.rs  intel_tester.rs  mod.rs  p4c_tester.rs  tree_sitter_tester.rs
