[package]
name = "GithubExtractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.17.1"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.96"
async-recursion = "1.0.4"
url = "2.3.1"
postgres = "0.19.5"
tokio-postgres = "0.7.8"
async-std = { version = "1", features = [ "attributes" ] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
async-fs = "1.6.0"
futures-lite = "1.13.0"
shutil = "0.1.2"
async-process = "1.7.0"
walkdir = "2.3.3"
tree-sitter = "0.20.9"
async-option = "0.1.1"
file-hashing = "0.1.2"
blake2 = "0.10.6"
crypto = "0.5.0"
sha2 = "0.10.6"
parking_lot = "0.12.1"
anyhow = "1.0.71"
lazy_static = "1.4.0"

analyzer-core = {path = "/Users/work/Downloads/p4analyzer-viluon-p4-grammar/crates/analyzer-core"}

tree-sitter-p4 = {git = "https://github.com/ace-design/tree-sitter-p4"}